# LAMINAR

./: .gitlab-ci.yml  COPYING.md  FILESTRUCTURE.md  README.md  TODO.md  codecov.yml  pyproject.toml  setup.py
.github/workflows/: ci.yml  pypi.yml
LAMINAR/: __init__.py
LAMINAR/Flow/: __init__.py  planarCNF.py
LAMINAR/LAMINAR/: LAMINAR.py  __init__.py
LAMINAR/utils/: __init__.py  gaussian2uniform.py
NFLAM/: __init__.py
NFLAM/Flow/: planarCNF.py
NFLAM/NFLAM/: NFLAM.py  __init__.py
NFLAM/utils/: __init__.py  dijkstra.py  gaussian2uniform.py  standardize.py
doc/: api.rst  conf.py  index.rst
notebooks/: demo.ipynb  gaussian.ipynb  visualisation.ipynb
src/LAMINAR/: __init__.py
src/LAMINAR/LAMINAR/: LAMINAR.py
tests/: test_LAMINAR.py  test_NFLAM.py
