# This section describes the requirements of the build/installation
# process itself. Being able to do this was the original reason to
# introduce pyproject.toml
[build-system]
requires = [
    "setuptools >=61",
]
build-backend = "setuptools.build_meta"

# This section provides general project metadata that is used across
# a variety of build tools. Notably, the version specified here is the
# single source of truth for LAMINAR's version
[project]
name = "laminar_learn"
description = "Add short description here"
readme = "README.md"
maintainers = [
    { name = "Christian Kleiber", email = "christian.kleiber@stud.uni-heidelberg.de" },
]
version = "0.3.10"
requires-python = ">=3.8"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy < 2",
    "torch",
    "torchdiffeq",
    "tqdm",
    "scipy",
    "matplotlib",
    "scikit-learn",
]

[project.optional-dependencies]
tests = [
    "pytest",
    "pytest-cov",
    "nbval",
]
docs = [
    "ipykernel",
    "nbsphinx",
    "nbsphinx-link",
    "sphinx",
    "sphinx_mdinclude",
    "sphinx_rtd_theme",
]


# The following section contains setuptools-specific configuration
# options. For a full reference of available options, check the overview
# at https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
[tool.setuptools]
packages = [
    "LAMINAR", "LAMINAR.LAMINAR", "LAMINAR.Flow", "LAMINAR.utils",
]

# The following is the configuration for the pytest test suite
[tool.pytest.ini_options]
testpaths = [
    "tests",
#    "notebooks",
]
